Initial commit - updated the Rproj after previous commit, updated the data file for problem 2

--- a/p8105_hw2_ag3786.md
+++ b/p8105_hw2_ag3786.md
@@ -21,7 +21,7 @@ library(tidyverse)
 **Problem 1**
 -------------
 
-### Import and clean the CSV
+### *Import and clean the CSV*
 
 ``` r
 nyc_transit = read_csv(file = "./data/NYC_Transit_Data.csv")
