Imported the updated Mr. Trash Wheel dataset for problem 2

--- a/p8105_hw2_ag3786_updated.Rmd
+++ b/p8105_hw2_ag3786_updated.Rmd
@@ -66,3 +66,16 @@ nyc_transit_tidy %>%
   filter(route_name == "A") %>% 
   distinct(route_name, line, station_name)
 ```
+
+
+## **Problem 2**
+### *Importing and cleaning the trash wheel sheet*
+
+```{r}
+trash_wheel = readxl::read_excel(path = "./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", sheet = 1, range = "A2:N258") %>% 
+  janitor::clean_names() %>% 
+  filter(!is.na(dumpster)) %>% 
+  mutate(
+    sports_balls = NULL, 
+    sports_balls_i = as.integer(sports_balls))
+```
